# compose-hot-reload

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  SECURITY.md  build.gradle.kts  jitpack.yml  settings.gradle.kts
.Codex/: HANDOFF.md
.claude/: HANDOFF.md  settings.json
bootstrap/: build.gradle.kts
cli/: build.gradle.kts
docs/: OPUS-HANDOFF.md  PLAN.md  WORKFLOW.md  ai-project-setup.md  ide-plugin-settings.md  multi-module-design.md  multi-module-ground-truth.md  phase0-findings.md  phase1.md  phase2-findings.md  phase6-interpreter-research.md  project-configuration.md  resource-edits-notes.md  resource-edits-v1.md  resource-invalidation-experiment.md  resourcesloader-compose-experiment.md  security-hardening.md
e2e/: check-compatibility-contract.sh  check-docs-contract.sh  check-release-version-contract.sh  run-clean-clone-configured.sh  run-configured-artifact.sh  run-configured-capture.sh  run-multi.sh  run-zero-touch-compatibility-gate.sh  run-zero-touch.sh  run.sh
engine/: build.gradle.kts
gradle-plugin/: build.gradle.kts  settings.gradle.kts
intellij-plugin/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
protocol/: build.gradle.kts
runtime-client/: build.gradle.kts  settings.gradle.kts
scripts/: build-interp-dex.sh  delegate.sh  dev-install.sh  emulator-up.sh  env.sh  extract-keys.sh  fetch-aosp-deployer.sh  gen-proxies.sh  icon-pixel.sh  stats.sh  taps.sh  ui-state.sh  verify-release-artifacts.sh
spike/toy-app/app/src/main/cpp/: CMakeLists.txt  hotreload_agent.cpp  interp_bridge.cpp
tasks/: README.md  (+54 more)
(+171 files in other folders)
